fixed layout issue

--- a/assets/css/3-sections/_header.sass
+++ b/assets/css/3-sections/_header.sass
@@ -64,7 +64,7 @@ header
   nav
     padding: 30px 15px 0 0
     position: absolute
-    min-width: 90%
+    min-width: 300px
     a
       display: inline-block
       margin-left: 15px
